[project]
name = "data_prep_connector"
version = "0.2.2.dev0"
requires-python = ">=3.10"
keywords = [
    "data",
    "data acquisition",
    "crawler",
    "web crawler",
    "llm",
    "generative",
    "ai",
    "fine-tuning",
    "llmapps",
]
description = "Scalable and Compliant Web Crawler"
license = { text = "Apache-2.0" }
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Hiroya Matsubara", email = "hmtbr@jp.ibm.com" }]
dependencies = [
    "scrapy>=2.11.2",
    "pydantic>=2.8.1",
    "tldextract>=5.1.2",
]

[project_urls]
Repository = "https://github.com/IBM/data-prep-kit"
Issues = "https://github.com/IBM/data-prep-kit/issues"
Documentation = "https://ibm.github.io/data-prep-kit/"

[build-system]
requires = ["setuptools>=68.0.0", "wheel", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "twine",
    "pytest>=7.3.2",
    "pytest-dotenv>=0.5.2",
    "pytest-env>=1.0.0",
    "pre-commit>=3.3.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "pytest-datadir>=1.5.0",
    "moto==5.0.5",
    "markupsafe==2.0.1",
]

[options]
package_dir = ["src", "test"]

[options.packages.find]
where = ["src/dpk_connector"]

[tool.pytest.ini_options]
# Currently we use low coverage since we have to run tests separately (see makefile)
#addopts = "--cov --cov-report term-missing --cov-fail-under 25"
markers = ["unit: unit tests", "integration: integration tests"]

[tool.coverage.run]
include = ["src/*"]
