[project]
name = "fm-data-processing"
version = "0.2.0"
requires-python = ">=3.9"
description = "IBM FM Data Processing Library"
authors = [
    { name = "David Wood", email = "dawood@us.ibm.com" },
    { name = "Boris Lublinsky", email = "blublinsky@ibm.com" },
]
dependencies = [
    "ray[default]==2.9.1",
    "pyarrow==14.0.2",
    "boto3==1.28.60",
    "pytz",
    "pandas",
    # The version of urllib fixes a whitesource-identified security issue - dawood 10/19/2023,
    "urllib3>=1.26.18",
    "dmf-lib==1.2.5",
    "argparse",
]



[build-system]
requires = ["setuptools>=68.0.0", "wheel", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "twine",
    "pytest>=7.3.2",
    "pytest-dotenv>=0.5.2",
    "pytest-env>=1.0.0",
    "pre-commit>=3.3.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
]

[options]
package_dir = ["src"]

[options.packages.find]
where = ["src/mutate"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov-fail-under 70"
markers = ["unit: unit tests", "integration: integration tests"]

[tool.coverage.run]
include = ["src/mutate/*"]
