[project]
name = "data_prep_lab"
version = "0.1.6"
requires-python = ">=3.10"
description = "Data Preparation Laboratory Library"
license = {text = "Apache-2.0"}
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "David Wood", email = "dawood@us.ibm.com" },
    { name = "Boris Lublinsky", email = "blublinsky@ibm.com" },
]
dependencies = [
    "ray[default]==2.9.3",
    "pyarrow==15.0.2",
    "boto3==1.34.69",
    "argparse",
    "mmh3",
    # These two are to fix security issue
    "fastapi>=0.109.1",
    "pillow>=10.2.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "twine",
    "pytest>=7.3.2",
    "pytest-dotenv>=0.5.2",
    "pytest-env>=1.0.0",
    "pre-commit>=3.3.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "moto==5.0.5",
    "markupsafe==2.0.1",
]

[options]
package_dir = ["src","test"]

[options.packages.find]
where = ["src/data_processing"]

[tool.pytest.ini_options]
# Currently we use low coverage since we have to run tests separately (see makefile)
addopts = "--cov --cov-report term-missing --cov-fail-under 25"
markers = ["unit: unit tests", "integration: integration tests"]

[tool.coverage.run]
include = ["src/*"]
