[project]
name = "data_prep_toolkit_transforms"
version = "0.0.1.dev0"
requires-python = ">=3.10"
description = "Data Preparation Toolkit Transforms"
license = {text = "Apache-2.0"}
#dynamic = ["dependencies"]

#[tool.setuptools.dynamic]
#dependencies = {file = "requirements.txt"}


dependencies = [
	"dpk_lang_id_transform_python @ git+https://github.com/IBM/data-prep-kit.git@td#subdirectory=transforms/language/lang_id/python",
	"dpk_pdf2parquet_transform_python @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/language/pdf2parquet/python",
	"dpk_doc_quality_transform_python @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/language/doc_quality/python",
	"dpk_ededup_transform_python @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/universal/ededup/python",
	"dpk_filter_transform_python @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/universal/filter/python",
	"dpk_resize_transform_python @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/universal/resize/python",
	"dpk_tokenization_transform_python @ git+https://github.com/IBM/data-prep-kit.git@td#subdirectory=transforms/universal/tokenization/python",
	"dpk_code_quality_transform_python @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/code/code_quality/python",
	"dpk_code2parquet_transform_python @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/code/code2parquet/python",
#	"dpk_header_cleanser_transform_python @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/code/header_cleanser/python",
	"dpk_malware_transform_python @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/code/malware/python",
	"dpk_proglang_select_transform_python @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/code/proglang_select/python",
]

[tool.setuptools.packages]
find = {namespaces = false}  # Disable implicit namespaces


