[project]
name = "fm_data_processing_kfp"
version = "0.0.3.dev12"
requires-python = ">=3.10"
description = "IBM FM Data Processing Library. KFP support"
authors = [
    { name = "David Wood", email = "dawood@us.ibm.com" },
    { name = "Boris Lublinsky", email = "blublinsky@ibm.com" },
    { name = "Alexey Roytman", email = "roytman@il.ibm.com" },
]
dependencies = [
    "kfp==1.8.22",
    "requests",
    "fm_data_processing",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "twine",
    "pytest>=7.3.2",
    "pytest-dotenv>=0.5.2",
    "pytest-env>=1.0.0",
    "pre-commit>=3.3.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
]

[options]
package_dir = ["src"]

[options.packages.find]
where = ["src/kfp_support"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov-fail-under 10"
markers = ["unit: unit tests", "integration: integration tests"]

[tool.coverage.run]
include = ["src/*"]