[project]
name = "data_prep_toolkit_kfp_shared"
version = "0.2.1.dev0"
requires-python = ">=3.10,<3.12"
description = "Data Preparation Kit Library. KFP support"
license = {text = "Apache-2.0"}
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "Boris Lublinsky", email = "blublinsky@ibm.com" },
    { name = "Alexey Roytman", email = "roytman@il.ibm.com" },
    { name = "Mohammad Nassar", email = "Mohammad.Nassar@ibm.com" },
    { name = "Revital Eres", email = "eres@il.ibm.com" },
]
dependencies = [
    "requests",
    "kubernetes",
    "data-prep-toolkit-ray==0.2.1.dev0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "twine",
    "pytest>=7.3.2",
    "pytest-dotenv>=0.5.2",
    "pytest-env>=1.0.0",
    "pre-commit>=3.3.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
]

[options]
package_dir = ["src"]

[options.packages.find]
where = ["src/runtime_utils", "src/python_apiserver_client"]


[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov-fail-under 10"
markers = ["unit: unit tests", "integration: integration tests"]

[tool.coverage.run]
include = ["src/*"]
