[project]
name = "data_prep_toolkit_transforms"
version = "0.2.1.dev0"
requires-python = ">=3.10,<3.12"
keywords = ["transforms", "data preprocessing", "data preparation", "llm", "generative", "ai", "fine-tuning", "llmapps" ]
description = "Data Preparation Toolkit Transforms"
license = {text = "Apache-2.0"}
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "Maroun Touma", email = "touma@us.ibm.com" },
]

dependencies = [
## Code
	"dpk_code_quality_transform_python    @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/code/code_quality/python",
	"dpk_code2parquet_transform_python    @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/code/code2parquet/python",
	"dpk_header_cleanser_transform_python @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/code/header_cleanser/python ; platform_system != 'Darwin'",
	"dpk_malware_transform_python         @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/code/malware/python",
	"dpk_proglang_select_transform_python @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/code/proglang_select/python",
## Language
	"dpk_doc_chunk_transform_python       @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/language/doc_chunk/python",
	"dpk_doc_quality_transform_python     @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/language/doc_quality/python",
	"dpk_lang_id_transform_python         @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/language/lang_id/python",
	"dpk_pdf2parquet_transform_python     @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/language/pdf2parquet/python",
	"dpk_text_encoder_transform_python    @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/language/text_encoder/python",
## Universal
	"dpk_ededup_transform_python          @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/universal/ededup/python",
	"dpk_filter_transform_python          @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/universal/filter/python",
	"dpk_resize_transform_python          @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/universal/resize/python",
	"dpk_tokenization_transform_python    @ git+https://github.com/IBM/data-prep-kit.git#subdirectory=transforms/universal/tokenization/python",
]

[project_urls]
Repository = "https://github.com/IBM/data-prep-kit"
Issues = "https://github.com/IBM/data-prep-kit/issues"
Documentation = "https://ibm.github.io/data-prep-kit/"

[build-system]
requires = ["setuptools>=68.0.0", "wheel", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {namespaces = false}  # Disable implicit namespaces


