[project]
name = "data_prep_toolkit_transforms"
version = "0.2.1.dev1"
requires-python = ">=3.10,<3.12"
keywords = ["transforms", "data preprocessing", "data preparation", "llm", "generative", "ai", "fine-tuning", "llmapps" ]
description = "Data Preparation Toolkit Transforms"
license = {text = "Apache-2.0"}
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "Maroun Touma", email = "touma@us.ibm.com" },
]

dependencies = [
	"data-prep-toolkit==0.2.1.dev0",
	"argparse",
	"boto3==1.34.69",
	"bs4==0.0.2",
	"clamd==1.0.2",
	"docling[ocr]==1.1.2",
	"duckdb==0.10.1",
	"fasttext==0.9.2",
	"filetype >=1.2.0, <2.0.0",
	"huggingface-hub >= 0.21.4, <1.0.0",
	"langcodes==3.3.0",
	"mmh3==4.1.0",
	"numpy==1.26.4",
	"pandas",
	"parameterized",
	"pyarrow==16.1.0",
	"python-dateutil>=2.8.2",
	"pytz>=2020.1",
	"quackling==0.1.0",
	"scancode-toolkit==32.1.0 ; platform_system != 'Darwin'",
	"sentence-transformers==3.0.1",
	"transformers==4.38.2",
	"tzdata>=2022.7",
	"xxhash==3.4.1",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"


[options]
package_dir = ["src"]

[options.packages.find]
where = ["src/"]

[tool.pytest.ini_options]
# Currently we use low coverage since we have to run tests separately (see makefile)
#addopts = "--cov --cov-report term-missing --cov-fail-under 25"
markers = ["unit: unit tests", "integration: integration tests"]

[tool.coverage.run]
include = ["src/*"]






