[project]
name = "data_prep_toolkit_transforms_ray"
version = "0.2.1.dev1"
requires-python = ">=3.10,<3.12"
keywords = ["transforms", "data preprocessing", "data preparation", "llm", "generative", "ai", "fine-tuning", "llmapps" ]
description = "Data Preparation Toolkit Transforms using Ray"
license = {text = "Apache-2.0"}
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "Maroun Touma", email = "touma@us.ibm.com" },
]

dependencies = [
	"data_prep_toolkit_transforms==0.2.1.dev1",
	"data-prep-toolkit-ray==0.2.1.dev0",
	"scancode-toolkit==32.1.0 ; platform_system != 'Darwin'",
	"parameterized",
	"tqdm==4.66.3",
	"mmh3==4.1.0",
	"xxhash==3.4.1",
	"tqdm==4.66.3",
	"scipy==1.12.0",
	"networkx==3.3",
	"colorlog==6.8.2",
	"func-timeout==4.3.5",
	"pandas==2.2.2",
	"emerge-viz==2.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"


[options]
package_dir = ["src"]

[options.packages.find]
where = ["src/"]

[tool.pytest.ini_options]
# Currently we use low coverage since we have to run tests separately (see makefile)
#addopts = "--cov --cov-report term-missing --cov-fail-under 25"
markers = ["unit: unit tests", "integration: integration tests"]

[tool.coverage.run]
include = ["src/*"]






