[project]
name = "dpk_fdedup_transform_python"
version = "0.3.0.dev0"
requires-python = ">=3.10"
description = "Fuzzy Dedup Transform for Python"
license = {text = "Apache-2.0"}
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "Nelson Bore", email = "k.nelsonbore@gmail.com" },
    { name = "Constantin Adam", email = "cmadam@us.ibm.com" },
]
dependencies = [
    "data-prep-toolkit==0.2.2.dev0",
    "pyarrow==16.1.0",
    "pyyaml>=6.0.2",
    "boto3>=1.34.69",
    "kubernetes>=30.1.0",
    "polars>=1.6.0",
    "disjoint-set>=0.8.0",
    "scipy>=1.14.1",
    "numpy<1.29.0",
    "sentencepiece>=0.2.0",
    "mmh3>=4.1.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "twine",
    "pytest>=7.3.2",
    "pytest-dotenv>=0.5.2",
    "pytest-env>=1.0.0",
    "pre-commit>=3.3.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "moto==5.0.5",
    "markupsafe==2.0.1",
]

[options]
package_dir = ["src","test"]

[options.packages.find]
where = ["src/"]

[tool.pytest.ini_options]
# Currently we use low coverage since we have to run tests separately (see makefile)
#addopts = "--cov --cov-report term-missing --cov-fail-under 25"
markers = ["unit: unit tests", "integration: integration tests"]

[tool.coverage.run]
include = ["src/*"]
