[project]
name = "dpk_data_profiling_dataset_stats_python"
version = "1.1.0"
requires-python = ">=3.10"
description = "Dataset statistics Python"
license = {text = "Apache-2.0"}
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "Pankaj Thorat", email = "pankaj.thorat@ibm.com" },
]
dependencies = [
    "data-prep-toolkit==0.2.1.dev0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "twine",
    "pytest>=7.3.2",
    "pytest-dotenv>=0.5.2",
    "pytest-env>=1.0.0",
    "pre-commit>=3.3.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "moto==5.0.5",
    "markupsafe==2.0.1",
    "pandas==2.1.1",
    "pygments==2.17.2",
    "langdetect==1.0.9",
    "tree_sitter==0.21.3",
    "tree_sitter_languages==1.10.2",
]

[options]
package_dir = ["src","test"]

[options.packages.find]
where = ["src/"]

[tool.pytest.ini_options]
# Currently we use low coverage since we have to run tests separately (see makefile)
#addopts = "--cov --cov-report term-missing --cov-fail-under 25"
markers = ["unit: unit tests", "integration: integration tests"]

[tool.coverage.run]
include = ["src/*"]
